--- a/drew.html
+++ b/drew.html
@@ -148,16 +148,6 @@
       margin-top: 4px;
     }
 
-    /* Section label above groups */
-    .section-tag {
-      font-size: 13px;
-      letter-spacing: 0.22em;
-      text-transform: uppercase;
-      color: rgba(255,255,255,0.65);
-      margin-left: 4px;
-      margin-bottom: 8px;
-    }
-
     /* CTA buttons under quotes */
     .card-link {
       display: inline-block;
@@ -263,7 +253,6 @@
 
     <!-- Marcus Aurelius + Mission -->
     <section id="mission-area">
-      <div class="section-tag">Mission</div>
       <div class="quote-block">
         <img src="marcus-aurelius.jpg" alt="Marcus Aurelius" class="quote-photo">
         <div class="quote-text">
@@ -278,7 +267,6 @@
 
     <!-- Alan Watts + Community -->
     <section>
-      <div class="section-tag">Community</div>
       <div class="quote-block">
         <img src="watts.jpeg" alt="Alan Watts" class="quote-photo">
         <div class="quote-text">
@@ -296,7 +284,7 @@
       <div class="section-tag">Roadmap</div>
       <div class="roadmap-container">
         <!-- adjust filename if needed to match your repo -->
-        <img src="psychedelic-road.jpeg" alt="Roadmap" class="roadmap-image">
+       <img src="psychedelic road.jpeg" alt="Roadmap" class="roadmap-image">
         <div class="phase phase1">Phase 1</div>
         <div class="phase phase2">Phase 2</div>
         <div class="phase phase3">Phase 3</div>
@@ -308,8 +296,6 @@
     <section id="nft-section">
       <!-- invisible anchor so "Token" nav still scrolls here -->
       <div id="token-section"></div>
-
-      <div class="section-tag">NFTs</div>
       <div class="quote-block">
         <img src="Mckenna.jpg" alt="Terence McKenna" class="quote-photo">
         <div class="quote-text">
@@ -324,7 +310,6 @@
 
     <!-- Jung + The Pit -->
     <section id="pit-section">
-      <div class="section-tag">The Pit</div>
       <div class="quote-block">
         <img src="jung.jpg" alt="Carl Jung" class="quote-photo">
         <div class="quote-text">
@@ -332,7 +317,7 @@
             “Loneliness does not come from having no people about one, but from being unable to communicate the things that seem important to oneself, or from holding certain views which others find inadmissible.”
           </blockquote>
           <div class="quote-author">— Carl Jung</div>
-          <a href="pit.html" class="card-link">Enter the Pit →</a>
+        <a href="tokenomics.html" class="card-link">Tokenomics →</a>
         </div>
       </div>
     </section>
@@ -341,3 +326,4 @@
 
 </body>
 </html>
+
