--- a/drew.html
+++ b/drew.html
@@ -245,7 +245,6 @@
       <div class="nav-link" onclick="document.getElementById('token-section').scrollIntoView({behavior:'smooth'})">Token</div>
       <div class="nav-link" onclick="document.getElementById('nft-section').scrollIntoView({behavior:'smooth'})">NFTs</div>
       <div class="nav-link" onclick="document.getElementById('mission-area').scrollIntoView({behavior:'smooth'})">Movement</div>
-      <div class="nav-link" onclick="document.getElementById('pit-section').scrollIntoView({behavior:'smooth'})">Pit</div>
     </nav>
   </header>
 
@@ -274,7 +273,7 @@
             “For the price of intelligence as we now know it is chronic anxiety — anxiety which appears to increase, oddly enough, to the very degree that human life is subjected to intelligent organization.”
           </blockquote>
           <div class="quote-author">— Alan Watts</div>
-          <a href="community.html" class="card-link">Join the Community →</a>
+          <a href="community.html" class="card-link">Our Movement →</a>
         </div>
       </div>
     </section>
@@ -285,9 +284,9 @@
       <div class="roadmap-container">
         <!-- adjust filename if needed to match your repo -->
        <img src="psychedelic road.jpeg" alt="Roadmap" class="roadmap-image">
-        <div class="phase phase1">Phase 1</div>
+        <div class="phase phase1">Phase 3</div>
         <div class="phase phase2">Phase 2</div>
-        <div class="phase phase3">Phase 3</div>
+        <div class="phase phase3">Phase 1</div>
         <div class="phase phase4">Phase 4</div>
       </div>
     </section>
@@ -326,4 +325,5 @@
 
 </body>
 </html>
+
 
