--- a/drew.html
+++ b/drew.html
@@ -244,7 +244,7 @@
             “For the price of intelligence as we now know it is chronic anxiety — anxiety which appears to increase, oddly enough, to the very degree that human life is subjected to intelligent organization.”
           </blockquote>
           <div class="quote-author">— Alan Watts</div>
-          <a href="community.html" class="card-link">Join the Community →</a>
+          <a href="community.html" class="card-link">Our Movement →</a>
         </div>
       </div>
     </section>
@@ -292,3 +292,4 @@
 
 </body>
 </html>
+
